# Eridian.

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  render_video.py  requirements.txt  run.py  run.sh  setup.py  test_components.py
config/: default.yaml
docs/: API.md  ARCHITECTURE.md  CLI-Reference.md  Classic-Pipeline.md  Environment-Mapping-Guide.md  Getting-Started.md  Home.md  LingBot-MAP-(GCT)-Backend.md  Python-API-Reference.md  Tuning-and-Tips.md  _Sidebar.md
eridian/: __init__.py  camera.py  config.py  depth.py  depth_enhanced.py  gct_backend.py  logging.py  main.py  pipeline.py  slam.py  spatial.py  splat.py
eridian/lingbot_map/aggregator/: base.py  stream.py
eridian/lingbot_map/heads/: camera_head.py
eridian/lingbot_map/layers/: __init__.py  attention.py  flashinfer_cache.py  rope.py
eridian/lingbot_map/models/: gct_base.py  gct_stream.py  gct_stream_window.py
eridian/lingbot_map/utils/: geometry.py  pose_enc.py
eridian/lingbot_map/vis/: __init__.py  glb_export.py  point_cloud_viewer.py  viser_wrapper.py
tests/: test_core.py
